--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "util-vue-core",
   "description": "Util团队HTML5前端框架",
-  "version": "1.0.14",
+  "version": "1.0.17",
   "author": "huxingye",
   "license": "MIT",
   "private": false,
@@ -45,6 +45,7 @@
     "vue-baidu-map": "0.21.8",
     "vue-picture-preview": "1.2.0",
     "vue-resource": "1.5.0",
+    "axios": "^0.19.0",
     "vue-lazyload": "^1.2.3",
     "vuex": "3.1.0",
     "babel-plugin-transform-runtime": "6.23.0",
