--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "util-vue-core",
   "description": "Util团队HTML5前端框架",
-  "version": "1.0.24",
+  "version": "1.0.25",
   "author": "huxingye",
   "license": "MIT",
   "private": false,
@@ -23,32 +23,32 @@
     "not ie <= 8"
   ],
   "devDependencies": {
+    "axios": "^0.19.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-transform-runtime": "6.23.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-stage-3": "^6.24.1",
     "cross-env": "^5.2.0",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.4",
-    "url-loader": "^0.5.8",
-    "node-sass": "^4.12.0",
-    "sass-loader": "^7.1.0",
-    "vue-loader": "^13.0.5",
-    "vue-template-compiler": "^2.4.4",
-    "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.9.1",
-    "vue": "^2.5.2",
-    "vue-router": "^3.0.1",
     "framework7": "^4.0.0",
     "framework7-icons": "^2.2.0",
     "framework7-vue": "^4.0.0",
-    "vue-baidu-map": "0.21.8",
-    "vue-picture-preview": "1.2.0",
-    "axios": "^0.19.0",
-    "vue-lazyload": "^1.2.3",
-    "vuex": "3.1.0",
-    "babel-plugin-transform-runtime": "6.23.0",
+    "node-sass": "^4.12.0",
+    "postcss-loader": "^2.0.8",
     "postcss-plugin-px2rem": "^0.8.1",
-    "postcss-loader": "^2.0.8"
+    "sass-loader": "^7.1.0",
+    "url-loader": "^0.5.8",
+    "vue": "^2.5.2",
+    "vue-baidu-map": "0.21.8",
+    "vue-lazyload": "^1.2.3",
+    "vue-loader": "^13.0.5",
+    "vue-picture-preview": "1.2.0",
+    "vue-router": "^3.0.1",
+    "vue-template-compiler": "^2.4.4",
+    "vuex": "3.1.0",
+    "webpack": "^3.6.0",
+    "webpack-dev-server": "^2.9.1"
   }
 }
