--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "vue-template-compiler": "^2.4.4",
     "vuex": "3.1.0",
     "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.9.1"
+    "webpack-dev-server": "^2.9.1",
+    "html-webpack-plugin": "^2.30.1",
+    "uglifyjs-webpack-plugin": "^1.1.1"
   }
 }
