--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1",
     "html-webpack-plugin": "^2.30.1",
-    "uglifyjs-webpack-plugin": "^1.1.1"
+    "uglifyjs-webpack-plugin": "^1.1.1",
+    "alloyfinger": "0.1.16"
   }
 }
